    - Active voices are now internally grouped to "Note" objects, instead of
      being directly assigned to a keyboard key. This allows more fine graded
      processing of voices, which is i.e. required for certain instrument
      script features.

  * packaging changes:
    - removed unnecessary dependency to libuuid
      (originated by libgig's usage of it)

  * Real-time instrument scripts:
    - Implemented scheduler for delayed MIDI events and for suspended scripts.
    - Built-in script function "wait()": implemented support for function's
      "duration-us" argument, thus scripts using this function are now
      correctly resumed after the requested amount of microseconds.
    - Built-in script function "play_note()": implemented support for
      function's "duration-us" argument, thus notes triggered with this
      argument are now correctly released after the requested amount of
      microseconds.
    - Fix: script events were not cleared when engine channel was reset,
      potentially causing undefined behavior.
    - Fixed crash which happened when trying to reference an undeclared
      variable.
    - Built-in script function "play_note()": Added support for passing
      special value -1 for "duration-us" argument, which will cause the
      triggered note to be released once the original note was released.

Version 2.0.0 (15 July 2015)

  * packaging changes:
    - fixed building with newer MinGW-w64
    - Mac OS X: support the new dir for Core Audio SDK
    - Mac OS X: fixed building outside source directory
    - made sure all source files for hostplugins are included when
      doing "make dist"
    - removed empty directories left from the cvs to svn migration
    - fixed compilation with gcc 4.6.1
    - another "make dist" fix, for the LV2 plugin
    - made --enable-pthread-testcancel default on Mac OS X
    - minor Makefile fix for building lscpparser when build and source
      directories are separate